--- a/package.json
+++ b/package.json
@@ -9,10 +9,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.12",
+    "@react-navigation/native-stack": "^6.8.0",
     "expo": "~46.0.9",
     "expo-status-bar": "~1.4.0",
+    "nativewind": "^2.0.8",
     "react": "18.0.0",
-    "react-native": "0.69.5"
+    "react-native": "0.69.5",
+    "react-native-heroicons": "^3.0.0",
+    "react-native-svg": "12.3.0",
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-video": "^2.3.1",
+    "react-native-video-player": "^0.14.0",
+    "tailwindcss": "^3.1.8",
+    "expo-av": "~12.0.4",
+    "expo-updates": "~0.14.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
